# pi-token-goat

./: .gitignore  CHANGELOG.md  CLAUDE.arch.md  CONTRIBUTING.md  LICENSE  PORT-PLAN.md  README.md  SECURITY.md  TS-PORT-NOTE.md  _config.yml  coverage.json  find_contaminator.py  lefthook.yml  package-lock.json  package.json  pi-extension-setup.md  port-layer.workflow.js  prof_out  pyproject.toml  tsconfig.json  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
.lefthook-scripts/: run-all-checks.sh  run-test.sh  run-typecheck.sh
.lefthook/pre-push/: test.sh  typecheck.sh  wsl-test.sh
.pi/extensions/: token-goat.ts
.pi/tasks/: tasks-019ef72a-b9a3-7d83-8682-b08962ecfa75.json
_layouts/: default.html
assets/css/: style.css
assets/js/: main.js
docs/: architecture.md  audit-2026-05-24-coupled-registries.md  benchmark-baseline-2026-05-24.md  known-issues.md  test-speed-deferrals.md
docs/plans/: 2026-05-23-context-savings-design.md  2026-05-23-dry-design.md  2026-05-23-reliability-design.md  2026-05-23-speed-design.md  2026-05-24-compact-speed-new-design.md  2026-05-24-context-savings-new-design.md  2026-05-24-dry-new-design.md  2026-05-24-important-issues-audit.md  2026-05-24-test-speed-extra-design.md  2026-06-05-context-growth-audit-design.md  2026-06-09-baseline-attribution-design.md  2026-06-13-opus-improvement-plan.md  2026-06-14-session-2ace93b9-mining-findings.md  2026-06-14-session-6b476e93-mining-findings.md  2026-06-14-session-9bd4c8b7-mining-findings.md  2026-06-14-session-blogarticle-mining-findings.md  2026-06-15-context-efficiency-enhancements.md  2026-06-15-context-management-enhancements.md
scripts/: fix_common.py  fix_lang_files.py  gradle_section.py.fragment  patch_gradle_filter.py
src/cc_saver/: __init__.py  cli.py  db.py  embeddings.py  gdrive.py  hooks_cli.py  image_shrink.py  install.py  parser.py  paths.py  project.py  repomap.py  session.py  stats.py  worker.py
src/cc_saver/languages/: go.py  html.py  json_idx.py  liquid.py  markdown.py  python.py  rust.py  typescript.py
src/token_goat/: __init__.py  __main__.py  _html_entities.ts  arch.py  ask.py  baseline.py  baseline.ts  bash_cache.py  bash_cache.ts  bash_compress.py  bash_compress.ts  bash_detect.py  bash_detect.ts  bash_parser.py  bash_parser.ts  bash_runner.py  bash_runner.ts  bridges.py  bridges.ts  cache_common.py  cache_common.ts  cli.py  cli.ts  cli_clean.ts  cli_common.ts  cli_compress.ts  cli_config.ts  cli_context_stats.py  cli_context_stats.ts  cli_doctor.py  cli_doctor.ts  cli_gdrive.ts  cli_history.ts  cli_image.ts  cli_index.ts  cli_lifecycle.ts  cli_lookup.ts  cli_map.ts  cli_sessions.ts  cli_skills.ts  (+98 more)
src/token_goat/bash_compress/: ai_tools.ts  cargo.ts  ci_gh.ts  cli_utils_a.ts  cli_utils_b.ts  cloud.ts  containers.ts  cpp.ts  database.ts  deploy_ng.ts  dotnet.ts  e2e.ts  formatters_sys.ts  framework.ts  git.ts  git_diff.ts  go.ts  iac.ts  infra.ts  jvm.ts  lang_misc.ts  linters.ts  linters2.ts  mobile.ts  node_pm.ts  node_tools.ts  pkg.ts  post_bash_helpers.ts  ruby_php.ts  search.ts  security.ts  tail_filters.ts  test_runners.ts  utils.ts
src/token_goat/languages/: common.py  common.ts  cpp.py  cpp.ts  csharp.py  csharp.ts  css_idx.py  css_idx.ts  dockerfile_idx.py  dockerfile_idx.ts  env_idx.py  env_idx.ts  go.py  go.ts  graphql_idx.py  graphql_idx.ts  html.py  html.ts  ini_idx.py  ini_idx.ts  java.py  java.ts  json_idx.py  json_idx.ts  kotlin.py  kotlin.ts  liquid.py  liquid.ts  makefile_idx.py  makefile_idx.ts  markdown.py  markdown.ts  php.py  php.ts  proto_idx.py  proto_idx.ts  python.py  python.ts  ruby.py  ruby.ts  (+11 more)
src/token_goat/render/: __init__.py  ansi.py  ansi.ts  common.py  common.ts  stats_messages.json  stats_renderer.py  stats_renderer.ts  types.py  types.ts
tasks/: session-mining-b08090ef.md
tests/: __init__.py  _cli_runner.ts  _install_helpers.ts  compact_test_helpers.py  conftest.py  filter_test_helpers.py  hook_helpers.py  setup.ts  test_adaptive_poll_interval.py  test_adaptive_poll_interval.test.ts  test_arch.py  test_ask.py  test_auto_redirect.py  test_base_filter_abc.py  test_base_filter_abc.test.ts  test_baseline.py  test_baseline.test.ts  test_bash_already_read.py  test_bash_already_read.test.ts  test_bash_cache.py  test_bash_cache.test.ts  test_bash_cli.py  test_bash_command_formatting.py  test_bash_command_formatting.test.ts  test_bash_compress.py  test_bash_compress_act_filter.py  test_bash_compress_act_filter.test.ts  test_bash_compress_ai_filters.py  test_bash_compress_ai_filters.test.ts  test_bash_compress_ai_filters2.py  test_bash_compress_ai_filters2.test.ts  test_bash_compress_ansible_enhanced.py  test_bash_compress_ansible_enhanced.test.ts  test_bash_compress_binary_inspect_filter.py  test_bash_compress_binary_inspect_filter.test.ts  test_bash_compress_build.py  test_bash_compress_build.test.ts  test_bash_compress_cargo_enhanced.py  test_bash_compress_cargo_enhanced.test.ts  test_bash_compress_cargo_enhancements.py  (+700 more)
tests/fixtures/cpp_sample/: sample.c  sample.cpp
tests/fixtures/csharp_sample/: UserService.cs
tests/fixtures/go_sample/: main.go
tests/fixtures/html_sample/: article.html
tests/fixtures/java_sample/src/main/java/com/example/: UserService.java
tests/fixtures/json_sample/: config.json
tests/fixtures/kotlin_sample/src/main/kotlin/com/example/: UserService.kt
tests/fixtures/liquid_sample/sections/: header.liquid
tests/fixtures/liquid_sample/snippets/: social-icons.liquid
tests/fixtures/md_sample/: article.md
tests/fixtures/php_sample/: shapes.php
tests/fixtures/py_sample/: app.py
tests/fixtures/ruby_sample/: animal.rb
tests/fixtures/rust_sample/: Cargo.toml
tests/fixtures/rust_sample/src/: main.rs
tests/fixtures/ts_sample/: index.ts
