[project]
name = "cc-saver"
version = "0.1.0"
description = "Claude Code companion that reduces token usage via local indexing, image shrinking, and session-context caching."
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Zelys" }]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "click>=8.1.0",
    "tree-sitter>=0.23,<0.24",
    "tree-sitter-languages>=1.10.0",
    "sqlite-vec>=0.1.5",
    "fastembed>=0.3.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.0",
    "platformdirs>=4.0.0",
    "psutil>=5.9.0",
    "networkx>=3.0",
    "pygments>=2.17.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
cc-saver = "cc_saver.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_saver"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
